fixed spacing issues

--- a/managr/profile_index.css
+++ b/managr/profile_index.css
@@ -1,9 +1,9 @@
 hr {
     display: block !important;
-    margin-top: 10px !important;
-    margin-bottom: 50px !important;
-    margin-left: 2.5% !important;
-    margin-right: 2.5% !important;
+    margin: 0 auto !important;
+    margin-bottom: 1em !important;
+    max-width: 90% !important;
+    min-width: 90% !important;
     border-style: solid !important;
     border-width: 2px !important;
     border-color:  #0397d7 !important;
@@ -16,23 +16,24 @@ body {
 
 .rectangle {
     background-color: white;
-    margin: auto;
-      width: 72%;
-      padding-left: 5%;
-      padding-top: 2%;
-      padding-bottom: 2%;
+    margin: 0 auto;
+      max-width: 90%;
+      min-width: 90%;
+      padding-bottom: 2em;
+      padding-left: 2em;
+      padding-top: 1em;
+      text-align: left;
         box-shadow: 0 2px 10px 0 rgba(0, 0, 0, 0.16), 0 2px 5px 0 rgba(0, 0, 0, 0.26);
 }
-
 
 h1 {
   color:black;
 }
 
 
-p {
+/*p {
     margin-left: 5%;
-}
+}*/
 
 .btn-primary {
     background-color: #0397d7;
@@ -40,8 +41,20 @@ p {
     margin-right: 18%;
 }
 
-#name {
-    padding: 50px 20px 50px 80px;
+.name-holder {
+  margin: 0 auto;
+    max-width: 90%;
+    min-width: 90%;
+    text-align: left;
+    padding-top: .5em
+
+}
+
+.about-button{
+  margin: 0 auto;
+    max-width: 90%;
+    min-width: 90%;
+   text-align: left;
 }
 
 .color {
